--- a/web/app/javascript/stylesheets/_utils.scss
+++ b/web/app/javascript/stylesheets/_utils.scss
@@ -68,6 +68,7 @@
     transform: scale(12);
   }
 }
+
 .ripple-white {
   ripple {
     @apply bg-white;
@@ -85,6 +86,7 @@
     transform: scale(12);
   }
 }
+
 .ripple-black {
   ripple {
     @apply bg-black;
@@ -94,4 +96,11 @@
 
 .will-change {
   will-change: transform, opacity;
+}
+
+.text-with-html {
+
+  & a {
+    @apply text-chateau-green-500 underline font-semibold;
+  }
 }
