--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -38,7 +38,7 @@
 	<% if props[:visible][:search] %>
 		<div class="flex-auto w-1/3">
 			<form
-				class="flex items-center h-full px-4 border rounded-full"
+				class="flex items-center h-full px-4 border rounded-full md:bg-gray-100 md:border-0"
 				data-controller="search"
 				data-target="search.search"
 				data-reflex-permanent
@@ -53,12 +53,12 @@
 				</svg>
 				<input autocomplete="false"
 							 name="q"
-							 class="flex-1 w-full h-full py-1 mx-2"
+							 class="flex-1 w-full h-full py-1 mx-2 bg-transparent"
 							 id="text-field-shape-one"
-							 placeholder="O que você está buscando hoje?"
+							 placeholder="Busque eventos, locais e organizadores..."
 							 type="text"
 							 data-target="search.input">
-				<input class="px-4 py-2 my-1 -m-1 -mr-3 text-sm antialiased font-light text-gray-700 bg-gray-200 rounded-full cursor-pointer hover:bg-gray-300"
+				<input class="px-4 py-2 my-1 -m-1 -mr-3 text-sm antialiased font-light text-gray-700 bg-gray-200 rounded-full cursor-pointer md:hidden hover:bg-gray-300"
 							 type="submit" value="Buscar"
 							 data-target="search.submit"
 							 data-action="click->search#searching"/>
