Adjust in tailwind pallete colors

--- a/web/app/javascript/stylesheets/_utils.scss
+++ b/web/app/javascript/stylesheets/_utils.scss
@@ -101,6 +101,6 @@
 .text-with-html {
 
   & a {
-    @apply text-chateau-green-500 underline font-semibold;
+    @apply text-green-500 underline font-semibold;
   }
 }
