--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -116,7 +116,7 @@
 		</div>
 		<div>
 			<% if display_name %>
-				<%= link_to limit_name_size(event.details_name), event_path(event), class: 'font-semibold group-hover:text-chateau-green-500 inline-block mt-1 text-gray-800 text-sm textfont-semibold', data: {target: 'event.name'} %>
+				<%= link_to limit_name_size(event.details_name), event_path(event), class: 'font-semibold group-hover:text-green-500 inline-block mt-1 text-gray-800 text-sm textfont-semibold', data: {target: 'event.name'} %>
 			<% end %>
 			<span class="<%= html.dig(:time_until, :css) || 'text-xs inline-block' %>">
 				<%= "#{I18n.l(event.first_day_time.to_date, format: :week).titlecase} #{format_hour event.first_day_time} · #{time_until event}" %>
