--- a/web/app/views/components/swipable/_swipable.html.erb
+++ b/web/app/views/components/swipable/_swipable.html.erb
@@ -26,7 +26,7 @@
 			</div>
 			<div data-swipable-module="stackedcards-overlay-left" class="absolute top-0 left-0 z-20 w-full h-full bg-red-700 opacity-0 rounded-xl">
 			</div>
-			<div data-swipable-module="stackedcards-overlay-right" class="absolute top-0 left-0 z-20 w-full h-full opacity-0 bg-chateau-green-500 rounded-xl">
+			<div data-swipable-module="stackedcards-overlay-right" class="absolute top-0 left-0 z-20 w-full h-full opacity-0 bg-green-500 rounded-xl">
 			</div>
 		</div>
 		<div class="flex items-center justify-center mt-10 space-x-5">
@@ -36,7 +36,7 @@
 					<path d="M10.88 21.94l5.53-5.54c.37-.37.58-.88.58-1.41V5c0-1.1-.9-2-2-2H6c-.8 0-1.52.48-1.83 1.21L.91 11.82C.06 13.8 1.51 16 3.66 16h5.65l-.95 4.58c-.1.5.05 1.01.41 1.37.59.58 1.53.58 2.11-.01zM21 3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2s2-.9 2-2V5c0-1.1-.9-2-2-2z"/>
 				</svg>
 			</div>
-			<div data-controller="ripple" data-swipable-module="right-action" class="relative p-3 overflow-hidden rounded-full cursor-pointer ripple ripple-black bg-chateau-green-100 tap-highlight-none h-content text-chateau-green-500 w-content">
+			<div data-controller="ripple" data-swipable-module="right-action" class="relative p-3 overflow-hidden rounded-full cursor-pointer ripple ripple-black bg-green-100 tap-highlight-none h-content text-green-500 w-content">
 				<svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 fill-current" viewBox="0 0 24 24">
 					<path d="M0 0h24v24H0V0z" fill="none" opacity=".87"/>
 					<path d="M13.12 2.06L7.58 7.6c-.37.37-.58.88-.58 1.41V19c0 1.1.9 2 2 2h9c.8 0 1.52-.48 1.84-1.21l3.26-7.61C23.94 10.2 22.49 8 20.34 8h-5.65l.95-4.58c.1-.5-.05-1.01-.41-1.37-.59-.58-1.53-.58-2.11.01zM3 21c1.1 0 2-.9 2-2v-8c0-1.1-.9-2-2-2s-2 .9-2 2v8c0 1.1.9 2 2 2z"/>
