--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -17,7 +17,7 @@
 		<% custom_title = capture do %>
 			<div class="bg-gray-100 flex p-5 rounded-lg">
 				<div class="flex-1">
-					<div class="flex-1 font-bold group-hover:text-chateau-green-500 leading-6 md:leading-normal md:pl-0 md:text-5xl text-gray-800 text-xl">
+					<div class="flex-1 font-bold group-hover:text-green-500 leading-6 md:leading-normal md:pl-0 md:text-5xl text-gray-800 text-xl">
 						<%= @place.details_name %>
 					</div>
 					<div class="leading-tight md:px-0 me-collection__title-secondary pt-1 text-gray-700 text-sm">
