--- a/web/app/views/users/_form.html.erb
+++ b/web/app/views/users/_form.html.erb
@@ -28,7 +28,7 @@
 		<%= form.text_field :name, class: 'border px-2 py-2 rounded w-full' %>
 	</div>
 
-	<button class="antialiased bg-chateau-green-500 float-right font-semibold px-5 py-2 rounded-full shadow-lg text-white">
+	<button class="antialiased bg-green-500 float-right font-semibold px-5 py-2 rounded-full shadow-lg text-white">
 		Salvar
 	</button>
 
