--- a/web/app/views/users/registrations/new.html.erb
+++ b/web/app/views/users/registrations/new.html.erb
@@ -62,7 +62,7 @@
 						<%= recaptcha_v3(action: 'sign_up') %>
 					<% end %>
 					<div class="select-none">
-						<%= f.submit "Enviar", class: 'antialiased bg-chateau-green-500 float-right font-semibold px-5 py-2 rounded-full shadow-lg text-white', data: {'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Fazer login com email'} %>
+						<%= f.submit "Enviar", class: 'antialiased bg-green-500 float-right font-semibold px-5 py-2 rounded-full shadow-lg text-white', data: {'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Fazer login com email'} %>
 					</div>
 				</div>
 			</div>
