--- a/web/app/views/components/collection/events/_collection.html.erb
+++ b/web/app/views/components/collection/events/_collection.html.erb
@@ -59,11 +59,11 @@
 										class:   class_string('relative overflow-hidden ripple ripple-black cursor-pointer flex justify-between group': continue_to,
 																					'flex justify-between':                                                                   !continue_to),
 										onclick: continue_to ? "Turbolinks.visit('#{continue_to}')" : nil do %>
-			<h2 class="flex-1 pl-5 text-xl font-bold leading-6 text-gray-800 group-hover:text-chateau-green-500 md:leading-normal md:pl-0 md:text-5xl">
+			<h2 class="flex-1 pl-5 text-xl font-bold leading-6 text-gray-800 group-hover:text-green-500 md:leading-normal md:pl-0 md:text-5xl">
 				<%= title[:principal] %>
 			</h2>
 			<% if continue_to && user %>
-				<div class="inline-flex items-center pr-3 text-xs text-gray-800 group-hover:text-chateau-green-500 md:pr-0"
+				<div class="inline-flex items-center pr-3 text-xs text-gray-800 group-hover:text-green-500 md:pr-0"
 						 data-action="click->section#seeMoreInNewPage">
 					<svg class="w-5 h-auto ml-1 fill-current md:hidden md:ml-2 md:w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"/>
@@ -91,7 +91,7 @@
 			<div data-reflex-permanent class="my-4 space-y-2 md:space-y-3"
 					 data-controller="filter"
 					 data-filter-inactive-class='["bg-gray-100","text-gray-800"]'
-					 data-filter-active-class='["bg-chateau-green-200","border-chateau-green-400","text-chateau-green-800"]'
+					 data-filter-active-class='["bg-green-200","border-green-400","text-green-800"]'
 					 data-target="section.filter">
 				<%= render(partial: 'feeds/filter',
 									 locals:  {
@@ -141,7 +141,7 @@
 						<div class="order-last md:hidden" data-controller="toggle-loader"
 								 data-toggle-loader-listener-on="section#loadMoreHere->started"
 								 data-toggle-loader-listener-off="section#loadMoreHere->finished">
-							<div class="flex items-center px-5 py-2 my-10 mr-10 text-center rounded-full shadow-xl cursor-pointer bg-chateau-green-100 text-chateau-green-800 w-content"
+							<div class="flex items-center px-5 py-2 my-10 mr-10 text-center rounded-full shadow-xl cursor-pointer bg-green-100 text-green-800 w-content"
 									 data-action="click->section#loadMoreHere"
 									 data-target="section.loadMoreHorizontal toggle-loader.off">
 								Mostrar mais
@@ -149,7 +149,7 @@
 									<path d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"/>
 								</svg>
 							</div>
-							<div class="flex hidden px-5 py-2 my-10 mr-10 text-center rounded-full shadow-xl cursor-pointer bg-chateau-green-100 text-chateau-green-800 w-content"
+							<div class="flex hidden px-5 py-2 my-10 mr-10 text-center rounded-full shadow-xl cursor-pointer bg-green-100 text-green-800 w-content"
 									 data-target="toggle-loader.on">
 								Carregando
 								<svg data-target="toggle-loader.onIcon" class="w-5 h-5 my-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -177,12 +177,12 @@
 					<div data-controller="toggle-loader"
 							 data-toggle-loader-listener-on="section#loadMoreHere->started"
 							 data-toggle-loader-listener-off="section#loadMoreHere->finished">
-						<div class="flex px-5 py-2 mx-auto my-10 text-center rounded-full shadow-xl cursor-pointer bg-chateau-green-100 text-chateau-green-800 w-content"
+						<div class="flex px-5 py-2 mx-auto my-10 text-center rounded-full shadow-xl cursor-pointer bg-green-100 text-green-800 w-content"
 								 data-action="click->section#loadMoreHere"
 								 data-target="section.loadMoreVertical toggle-loader.off">
 							Mostrar mais
 						</div>
-						<div class="flex hidden px-5 py-2 mx-auto my-10 text-center rounded-full shadow-xl cursor-pointer bg-chateau-green-100 text-chateau-green-800 w-content"
+						<div class="flex hidden px-5 py-2 mx-auto my-10 text-center rounded-full shadow-xl cursor-pointer bg-green-100 text-green-800 w-content"
 								 data-target="toggle-loader.on">
 							Carregando
 							<svg data-target="toggle-loader.onIcon" class="w-5 h-5 my-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
