--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -16,7 +16,7 @@
 		<% custom_title = capture do %>
 			<div class="bg-gray-100 flex p-5 rounded-lg">
 				<div class="flex-1">
-					<div class="flex-1 font-bold group-hover:text-chateau-green-500 leading-6 md:leading-normal md:pl-0 md:pl-5 md:text-5xl text-gray-800 text-xl">
+					<div class="flex-1 font-bold group-hover:text-green-500 leading-6 md:leading-normal md:pl-0 md:pl-5 md:text-5xl text-gray-800 text-xl">
 						<%= @organizer.details_name %>
 					</div>
 				</div>
