--- a/web/app/views/search/index.html.erb
+++ b/web/app/views/search/index.html.erb
@@ -37,7 +37,7 @@
 		<h2 class="text-2xl">Nenhum evento encontrado. <%= link_to 'Veja todos os eventos', feed_path %>.</h2>
 	<% elsif @categories.present? %>
 		<div class="mx-auto md:w-9/12">
-			<h2 class="flex-1 pl-5 text-xl font-bold leading-6 text-gray-800 group-hover:text-chateau-green-500 md:leading-normal md:pl-0 md:text-5xl">Categorias</h2>
+			<h2 class="flex-1 pl-5 text-xl font-bold leading-6 text-gray-800 group-hover:text-green-500 md:leading-normal md:pl-0 md:text-5xl">Categorias</h2>
 			<div class="flex flex-wrap px-5 mt-5 md:px-0">
 				<% @categories.each do |category| %>
 					<a href="<%= category_events_path category %>" class="inline-block px-4 py-1 mt-2 mr-2 antialiased text-gray-800 transition-colors duration-200 transform bg-gray-100 border rounded-full cursor-pointer select-none tap-highlight-none mdc-chip me-chip">
