User can edit slug

--- a/web/app/views/users/_form.html.erb
+++ b/web/app/views/users/_form.html.erb
@@ -13,9 +13,11 @@
 		</div>
 	<% end %>
 
-	<div class="flex justify-center">
+	<div class="flex flex-col items-center justify-center">
 		<% if @user.picture %>
 			<%= image_tag @user.picture, {class: "mb-1 bg-cover bg-gray-400 h-12 md:h-16 md:w-16 rounded-full w-12", alt: @user.name, onerror: "this.style.opacity='0'"} %>
+			<%= form.hidden_field :image, value: @user.cached_image_data %>
+			<%= form.file_field :image, class: "" %>
 		<% else %>
 			Você não possui nenhuma foto, envie clicando abaixo.
 			<%= form.hidden_field :image, value: @user.cached_image_data %>
@@ -26,6 +28,11 @@
 	<div class="text-gray-500">
 		<label class="font-medium">Nome</label>
 		<%= form.text_field :name, class: 'border px-2 py-2 rounded w-full mt-1' %>
+	</div>
+
+	<div class="text-gray-500">
+		<label class="font-medium">Nome de usuário (username)</label>
+		<%= form.text_field :slug, class: 'border px-2 py-2 rounded w-full mt-1' %>
 	</div>
 
 	<button class="float-right px-5 py-2 antialiased font-semibold text-white bg-green-500 rounded-full">
