--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -15,11 +15,11 @@
 
 	<div class="is-animated md:w-9/12 mx-auto sm:container space-y-3">
 		<div class="bg-white mx-3 px-8 py-3 rounded-md shadow-sm space-y-3 text-center">
-			<%= image_tag @organizer.image[:sm].try { |image| image.url(public: true) }, {
+			<%= image_tag shrine_image_url(@organizer, :sm), {
 					loading: :lazy,
 					class:   'max-w-xs mx-auto rounded-full',
 					onerror: "this.style.opacity='0'"
-			} %>
+			} if @organizer.image_data? %>
 			<div>
 				<div class="flex-1 font-bold group-hover:text-green-500 leading-6 md:leading-normal md:pl-0 md:text-5xl text-2xl text-gray-700">
 					<%= @organizer.details_name %>
