Adjust style for desktop version

--- a/web/app/views/events/_large_event.html.erb
+++ b/web/app/views/events/_large_event.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id event %>" class="bg-white shadow-sm md:border md:p-5 md:rounded md:shadow-md"
+<div id="<%= dom_id event %>" class="bg-white shadow-sm md:rounded md:shadow"
 		 data-event-favorited="<%= user and user.like?(event) if user and user %>"
 		 data-event-identifier="<%= event.id %>"
 		 data-event-description-open="false"
