--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -1,6 +1,6 @@
 <%#= render partial: "feeds/float_menu" unless mobile_device? %>
 
-<section data-controller="page" data-target="page.page" class="pt-2 mx-auto mb-24 space-y-2 bg-gray-50 is-animated lg:w-9/12 md:mt-40 sm:container">
+<section data-controller="page" data-target="page.page" class="pt-2 mx-auto mb-24 space-y-2 bg-gray-50 is-animated md:w-6/12 md:mt-5 sm:container">
 	<%# if current_user && current_user.notifications_topics_all_requested == false %>
 	<!-- <div class="me-section">
       <div class="me-section__inner">
