--- a/web/app/views/events/_group_by_day_list.html.erb
+++ b/web/app/views/events/_group_by_day_list.html.erb
@@ -1,9 +1,9 @@
 <% events.group_by { |e| e.first_day_time.to_date.strftime("%Y-%m-%d") }.each do |group| %>
 	<div class="bg-white content-visibility-auto contain-intrinsic-size-md">
-		<div class="<%= class_names('sticky bg-white z-10 flex-1 px-5 pt-4 pb-2 leading-6 text-gray-700 md:leading-normal md:pl-0',
+		<div class="<%= class_names('sticky bg-white z-10 flex-1 px-5 pt-4 pb-2 leading-6 text-gray-700 md:leading-normal md:px-5',
 																{'top-0':  !content_for?(:top_app_bar_title),
 																 'top-12': content_for?(:top_app_bar_title)}) %>">
-			<h2 class="text-xl font-semibold md:text-5xl"><%= day_of_week(group[0].to_date).titlecase %></h2>
+			<h2 class="text-xl font-semibold md:text-4xl"><%= day_of_week(group[0].to_date).titlecase %></h2>
 			<% if group[0].to_date == Date.today || group[0].to_date == Date.tomorrow %>
 				<div class="-mt-1 border-b-2 border-green-200 font-light text-xs w-content"><%= "#{I18n.l(group[0].to_date, format: :week)} · #{I18n.l(group[0].to_date, format: :long)}" %></div>
 			<% elsif group[0].to_date < Date.today + 7 %>
