--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -103,28 +103,28 @@
 </script>
 
 <section id="page" class="pb-10">
-	<div class="relative w-full mx-auto is-animated md:mt-24 md:w-6/12">
+	<div class="relative w-full mx-auto is-animated md:mt-12 md:w-6/12">
 		<%= render partial: 'events/large_event', locals: {
 				event: @event,
 				user:  current_user
 		} %>
 	</div>
 
-	<div class="relative w-9/12 w-full px-2 mt-12 mb-12 md:w-9/12">
+	<div class="relative w-9/12 w-full px-2 mx-auto mt-12 mb-12 md:px-0 md:w-6/12">
 		<h2 class="px-4 mb-3 font-bold text-gray-700 uppercase">Eventos similares</h2>
-		<div id="horizontal-similar-events" class="bg-white shadow-xs">
+		<div id="horizontal-similar-events" class="overflow-hidden bg-white rounded shadow">
 			<%= render partial: 'feeds/horizontal_event', collection: @similar_events, as: :event, locals: {user: current_user} %>
 		</div>
 	</div>
 
-	<div class="fixed bottom-0 flex items-center w-screen px-3 py-2 space-x-2 text-sm font-medium text-gray-400 bg-gray-50">
-		<a href="<%= @event.details_source_url %>" target="_blank" class="shadow-sm flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded">
+	<div class="fixed bottom-0 flex items-center w-screen px-3 py-2 space-x-2 text-sm font-medium text-gray-400 cursor-pointer bg-gray-50">
+		<a href="<%= @event.details_source_url %>" target="_blank" class="flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm">
 			<div>Abrir no facebook</div>
 			<svg class="h-4 text-gray-300 fill-current" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path d="M16 16H2V2H9V0H2C0.89 0 0 0.9 0 2V16C0 17.1 0.89 18 2 18H16C17.1 18 18 17.1 18 16V9H16V16ZM11 0V2H14.59L4.76 11.83L6.17 13.24L16 3.41V7H18V0H11Z"/>
 			</svg>
 		</a>
-		<div class="shadow-sm flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded"
+		<div class="flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm cursor-pointer"
 				 data-controller="share-button"
 				 data-share-button-text="<%= strip_tags(limit_description_size(@event.details_description, 160)) %>"
 				 data-share-button-title="<%= @event.details_name %>"
