--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -15,33 +15,35 @@
 %>
 
 <header class="<%= class_names('flex my-auto mx-auto select-none md:w-9/12 md:px-0 tap-highlight-none',
-															 {'h-12 px-5':           !current_page?('/busca'),
-																'h-content py-1': current_page?('/busca'),
-																'space-x-4':           content_for?(:top_app_bar_title),
-																'justify-between':     !content_for?(:top_app_bar_title)}) %>"
+															 {'h-12 px-5':       !current_page?('/busca'),
+																'h-content py-1':  current_page?('/busca'),
+																'space-x-4':       content_for?(:top_app_bar_title),
+																'justify-between': !content_for?(:top_app_bar_title)}) %>"
 				id="top-bar">
 	<div class="flex my-auto text-gray-700">
-		<% if props[:visible][:back_button] %>
-			<div data-controller="ripple" class="overflow-hidden relative ripple ripple-black select-none tap-highlight-none"
-					 onclick="window.AnimateModule.animateBackbutton()"
-					 aria-label="Voltar">
-				<svg class="fill-current h-4" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-					<path d="M10.5 17L1.5 9M1.5 9L10.5 1M1.5 9H20" stroke="#4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-				</svg>
-			</div>
-		<% else %>
-			<% if controller_name != 'search' %>
-				<a href="<%= search_index_path %>">
-					<svg class="w-6 h-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-						<path fill="none" d="M0 0h24v24H0V0z"/>
-						<path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+		<% if mobile_device? %>
+			<% if props[:visible][:back_button] %>
+				<div data-controller="ripple" class="overflow-hidden relative ripple ripple-black select-none tap-highlight-none"
+						 onclick="window.AnimateModule.animateBackbutton()"
+						 aria-label="Voltar">
+					<svg class="fill-current h-4 md:w-auto" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M10.5 17L1.5 9M1.5 9L10.5 1M1.5 9H20" stroke="#4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 					</svg>
-				</a>
+				</div>
+			<% else %>
+				<% if controller_name != 'search' %>
+					<a href="<%= search_index_path %>">
+						<svg class="w-6 h-auto fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+							<path fill="none" d="M0 0h24v24H0V0z"/>
+							<path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+						</svg>
+					</a>
+				<% end %>
 			<% end %>
 		<% end %>
 	</div>
 	<div class="<%= class_names 'inline-flex items-center', 'hidden': ['search'].include?(controller_name) %>">
-		<% if content_for?(:top_app_bar_title) %>
+		<% if mobile_device? && content_for?(:top_app_bar_title) %>
 			<div class="font-semibold text-gray-700">
 				<%= content_for(:top_app_bar_title) %>
 			</div>
@@ -63,7 +65,7 @@
 	<% if props[:visible][:search] %>
 		<div class="flex-auto w-1/3">
 			<form
-				class="bg-white flex h-full items-center rounded px-2"
+				class="bg-white flex h-full items-center rounded px-2 md:mx-5"
 				data-controller="search"
 				data-target="search.search"
 				data-reflex-permanent
@@ -72,10 +74,10 @@
 				method="get"
 				name="search"
 				style="width: 100%">
-<!--				<svg class="w-6 h-auto fill-current material-icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">-->
-<!--					<path fill="none" d="M0 0h24v24H0V0z"/>-->
-<!--					<path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>-->
-<!--				</svg>-->
+				<!--				<svg class="w-6 h-auto fill-current material-icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">-->
+				<!--					<path fill="none" d="M0 0h24v24H0V0z"/>-->
+				<!--					<path d="M15.5 14h-.79l-.28-.27c1.2-1.4 1.82-3.31 1.48-5.34-.47-2.78-2.79-5-5.59-5.34-4.23-.52-7.79 3.04-7.27 7.27.34 2.8 2.56 5.12 5.34 5.59 2.03.34 3.94-.28 5.34-1.48l.27.28v.79l4.25 4.25c.41.41 1.08.41 1.49 0 .41-.41.41-1.08 0-1.49L15.5 14zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>-->
+				<!--				</svg>-->
 				<input autocomplete="false"
 							 name="q"
 							 class="bg-gray-50 flex-1 h-10 mr-2 px-2 py-1 rounded w-full"
